--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ POSTGRES_PORT=5432
 POSTGRES_USER=local_user
 POSTGRES_PASSWORD=local_pass
 POSTGRES_DB=local_db
+DATABASE_URL=postgres://local_user:local_pass@localhost:5432/local_db
 POSTGRES_CA=
